<resources>
    <string name="app_name">Digital Learning</string>
    <string name="loading">Loading...</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_forum">Forum Mahasiswa</string>
    <string name="nav_fakultas_lain">Fakultas Lain</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Forum Mahasiswa</item>
        <item>Fakultas Lain</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Logout</item>
    </string-array>

    <!--Halaman LOGIN-->
    <string name="edit_text_nim">NIM</string>
    <string name="edit_text_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_view_register_link">Belum memiliki akun?\nDaftar disini</string>

    <!--Halaman Home-->
    <string name="text_view_header_text">Mata Kuliah Yang Diambil</string>

    <!--Halaman Search Fakultas-->
    <string name="text_view_list_fakultas">List Fakultas</string>

    <!--Halaman Search Matkul-->
    <string name="edit_text_search_matkul">Cari Mata Kuliah</string>

    <!--Halaman New PostModel-->
    <string name="edit_text_judul">Judul Post</string>
    <string name="edit_text_kategori">Kategori</string>
    <string name="edit_text_isi_post">Isi Post</string>
    <string name="button_post">Post</string>
    <string name="button_insert_file">Pilih File</string>

    <!--Halaman Inside Post-->
    <string name="edit_text_comment">Komentar...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
