<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_new_post"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/nav_new_post" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_accessibility_black_24dp"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_lock_outline_black_24dp"
                android:title="@string/nav_logout" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_none"
        android:title=""
        android:visible="false"/>
</menu>