<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutJudulPost"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editTextJudulPost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/edit_text_judul" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutKategoriPost"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editTextKategoriPost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/edit_text_kategori" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutIsiPost"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">

                <EditText
                    android:id="@+id/editTextIsiPost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/edit_text_isi_post" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/buttonPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_post" />

        <Button
            android:id="@+id/buttonInsertFilePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/button_insert_file" />

        <TextView
            android:id="@+id/textViewNamaFilePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonInsertFilePost" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>